--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
                 <nav class="pre-nav">
                     <p href="#" class="logo">
                         <i class="fas fa-book"></i>
-                        Web Dev Syndicate
+                        <a href="index.html">Web Dev Syndicate</a>
                     </p>
                     <ul> <!--highlighted class is the current page class so for the index page it is home-->
                         <li><a href="index.html" >Home</a></li>
