--- a/JoinUs.html
+++ b/JoinUs.html
@@ -45,20 +45,22 @@
                 <!-- This is the start of the main content, use everything before as a template-->
                     <div class="content">
                     
-                        <h2>To join the club please follow the steps below:</h2>
+                        <h1>To join the club please follow the steps below:</h1>
+                        <br>
                         <div class="introtext">
                             Step 1: Please fill out the form below
                         </div>
                         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScUq2s-8G5sge95GWlvcEH8dq_VTkY9PEHstQVcaLZuwx31nA/viewform?embedded=true"  frameborder="0"  scrolling="no" marginheight="0" marginwidth="0">Loading…</iframe>
                         </iframe>
                         <div class="introtext">
-                            Step 2: Join our discord
+                            Step 2: Join our Discord server
                         </div>
-
-                        <a href="https://discord.gg/hBbA5rMK8e" class="buttonopt1">
-                            click here to join discord
-                        </a>
-                         
+                            <a href="https://discord.gg/hBbA5rMK8e" class="buttonopt1">
+                                Discord
+                            </a> 
+                        <div class="regtxt">
+                        Discord and emails are our primary way of communication. Through Discord, we can communicate imporrant information and allow students to interact amonst themselves. If you do not have discord yet, please consider creating an account.
+                        </div>
                     </div>
                 <!-- this is the end of the content, use everything before as a template-->
                 </div>
