--- a/JoinUs.html
+++ b/JoinUs.html
@@ -23,9 +23,7 @@
                 <div id="youtube-area">
                     <h1>Title</h1>
                     <div id="youtube"></div>
-                    <!--youtube表示エリア-->
                     <div id="youtube-mask"></div>
-                    <!--youtubeマスクエリア-->
                 </div>
             </header>
             <div class="container">
@@ -55,14 +53,28 @@
                         <div class="introtext">
                             Step 2: Join our Discord server
                         </div>
+
+                        <div class="regtxt">
+                            Please click on the button below to join our discord.
+                        </div>
                             <a href="https://discord.gg/hBbA5rMK8e" class="buttonopt1">
                                 Discord
                             </a> 
                         <div class="regtxt">
-                        Discord and emails are our primary way of communication. Through Discord, we can communicate imporrant information and allow students to interact amonst themselves. If you do not have discord yet, please consider creating an account.
+                        Discord and emails are our primary way of communication. Through Discord, we can communicate important information and allow students to interact amongst themselves. If you do not have Discord yet, please consider creating an account.
                         </div>
+
+                        <div class="regtxt">
+                        Once you have completed both of these steps, you have officially become a member of the Web Development Syndicate. Please reference the Contact page to learn about meeting information or find out ways to contact us.
+                        Welcome to the club!
+                        </div>
+                        <br>
+                        <br>
                     </div>
                 <!-- this is the end of the content, use everything before as a template-->
+                <footer>
+                    © Arshdeep Singh and Web Development Syndicate at TCC
+                </footer>
                 </div>
             </div>
         </div>
