--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 <div id="youtube-area">
                     <h1>Title</h1>
                     <div id="youtube"></div>
-                    <!--youtube表示エリア-->
                     <div id="youtube-mask"></div>
-                    <!--youtubeマスクエリア-->
                 </div>
             </header>
             <div class="container">
@@ -46,7 +44,7 @@
                     <div class="content">
                         <h1>Want to learn how to make a website?</h1>
                         <div class="introtext">
-                        <p>If so, you have come to the right place! The Webdevelopment Syndicate is a community of students who learn to make websites together.</p>
+                        <p>If so, you have come to the right place! The Web Development Syndicate is a community of students who learn to make websites together.</p>
                         </div>
                         <div class="flexcontainer">
                             <div class="preimg"> 
@@ -73,6 +71,9 @@
                    </div>
                 </div>
                 <!-- this is the end of the content, use everything before as a template-->
+                <footer>
+                    © Arshdeep Singh and Web Development Syndicate at TCC
+                </footer>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
