--- a/Leaders.html
+++ b/Leaders.html
@@ -23,9 +23,7 @@
                 <div id="youtube-area">
                     <h1>Title</h1>
                     <div id="youtube"></div>
-                    <!--youtube表示エリア-->
                     <div id="youtube-mask"></div>
-                    <!--youtubeマスクエリア-->
                 </div>
             </header>
             <div class="container">
@@ -48,6 +46,9 @@
                     </div>
                 </div>
                 <!-- this is the end of the content, use everything before as a template-->
+                <footer>
+                    © Arshdeep Singh and Web Development Syndicate at TCC
+                </footer>
             </div>
         </div>
     
