--- a/index.html
+++ b/index.html
@@ -62,12 +62,68 @@
                                     </div>
                                     <ul>
                                         <li>Click on the Join us page</li>
-                                        <li>fill out the google form</li>
-                                        <li>Join our discord</li>
+                                        <li>fill out the form</li>
+                                        <li>Join our Discord</li>
                                     </ul>
                             </div>
                             </div>
                         </div> 
+                        <div class="regtxt">
+                            This club provides resources that can help you learn about many different types of web technologies. Although the club promotes inter-student learning
+                            and interactions, the club also has tutors that can put you on the right  track. Listed below are some things we can help you learn and get into.
+                            Most of these technologies include things needed to build a website such as the Wed Dev Syndicate club website.
+                        </div>
+                        <h2>
+                        Here are some technologies you will be able to learn in this club:
+                        </h2>
+                        <div class="flex-left-align">
+                            <div class="flex-img-box">
+                                <img src="https://icons-for-free.com/iconfiles/png/512/icon++html+icon-1320194800994962643.png">
+                                <p>HTML</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/121-css3-512.png">
+                                <p>CSS</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/480px-Unofficial_JavaScript_logo_2.svg.png">
+                                <p>Javascript</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/256_Php_logo-512.png">
+                                <p>php</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://www.freeiconspng.com/thumbs/sql-server-icon-png/sql-server-icon-png-29.png">
+                                <p>SQL</p>
+                            </div>
+                        </div>
+                        <h2>
+                            We can also help you learn:
+                        </h2>
+                        <div class="flex-left-align">
+                            <div class="flex-img-box">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1200px-ISO_C%2B%2B_Logo.svg.png">
+                                <p>C++</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://dev.java/assets/images/java-logo-vert-blk.png">
+                                <p>Java</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://yt3.ggpht.com/dBwhvX2iF121h0UWumMKi5_4cPclBTKIdIm3KM9KroRUcLWrLkppDf67dIDH-i_YrBAupazR=s900-c-k-c0x00ffffff-no-rj">
+                                <p>Unity</p>
+                            </div>
+                        </div>
+                        <div class="regtxt">
+                            Although these programming languages and technologies aren't directly related to web development. Many of our members are knowledgeable in them, and
+                            are more than happy to help you learn.
+                        </div>
+                        <div class="regtxt">
+                            This club is a great opportunity to get introduced to and learn many different things. Joining our club is a great way to start you journey into the
+                            the world of web development and programming.
+                        </div>
+                        <br>
                    </div>
                 </div>
                 <!-- this is the end of the content, use everything before as a template-->
