--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" 
         />
+        <link rel="icon" type="image/x-icon" href="/img/favicon.png">
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/6-3-2.css">
@@ -47,8 +48,9 @@
                         <p>If so, you have come to the right place! The Web Development Syndicate is a community of students who learn to make websites together.</p>
                         </div>
                         <div class="flexcontainer">
-                            <div class="preimg"> 
-                                <p>Infield professional speakers</p>
+                            <div class="preimg">
+                                <img src="/img/speaker1.jpg">
+                                <p>Professional Guest speakers</p>
                             </div>
                             <div class="btxt flexcontainer">
                                 <p>
@@ -76,7 +78,7 @@
                         <h2>
                         Here are some technologies you will be able to learn in this club:
                         </h2>
-                        <div class="flex-left-align">
+                        <div class="flex-left-align flex-left-margin-align-even">
                             <div class="flex-img-box">
                                 <img src="https://icons-for-free.com/iconfiles/png/512/icon++html+icon-1320194800994962643.png">
                                 <p>HTML</p>
@@ -101,7 +103,7 @@
                         <h2>
                             We can also help you learn:
                         </h2>
-                        <div class="flex-left-align">
+                        <div class="flex-left-align flex-left-margin-align-even">
                             <div class="flex-img-box">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1200px-ISO_C%2B%2B_Logo.svg.png">
                                 <p>C++</p>
@@ -113,6 +115,14 @@
                             <div class="flex-img-box">
                                 <img src="https://yt3.ggpht.com/dBwhvX2iF121h0UWumMKi5_4cPclBTKIdIm3KM9KroRUcLWrLkppDf67dIDH-i_YrBAupazR=s900-c-k-c0x00ffffff-no-rj">
                                 <p>Unity</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png">
+                                <p>git</p>
+                            </div>
+                            <div class="flex-img-box">
+                                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png">
+                                <p>GitHub</p>
                             </div>
                         </div>
                         <div class="regtxt">
