--- a/Leaders.html
+++ b/Leaders.html
@@ -10,6 +10,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" 
         />
+        <link rel="icon" type="image/x-icon" href="/img/favicon.png">
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/6-3-2.css">
