--- a/Contact.html
+++ b/Contact.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/6-3-2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <script src="script.js"></script>
     </head>
     <body style="background: url('/img/movie.jpg') no-repeat; background-size: cover;">
@@ -43,7 +44,18 @@
                 <div class="pre-content">
                 <!-- This is the start of the main content, use everything before as a template-->
                     <div class="content">
-                    
+                        <h1>Contact us</h1>
+                        <img id="clubpic" src="/img/location.jpg">
+                        <div class="regtxt">
+                            Meeting Information: 2807 WSTU, Thursdays 3-4pm
+                            <br>
+                            <br>
+                            For any questions, please contact our wonderful sponsor Yuriko Bingman at: 	yuriko.bingman@tccd.edu
+                        </div>
+
+                        <div class="introtext">
+                            Feedback regarding this website is welcome in the Discord. Please get in contact and help us improve the user experience.
+                        </div>
                     </div>
                 </div>
                 <!-- this is the end of the content, use everything before as a template-->
