--- a/JoinUs.html
+++ b/JoinUs.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/6-3-2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <script src="script.js"></script>
     </head>
     <body style="background: url('/img/movie.jpg') no-repeat; background-size: cover;">
@@ -61,9 +62,12 @@
                                 <div class="regtxt">
                                     Please click on the button below to join our discord.
                                 </div>
-                                    <a href="https://discord.gg/hBbA5rMK8e" class="buttonopt1">
+                                <span class="material-symbols-outlined regtxt">
+                                    subdirectory_arrow_right
+                                    </span>   
+                                <a href="https://discord.gg/hBbA5rMK8e" class="buttonopt1">
                                         Discord
-                                    </a> 
+                                </a> 
                                 <div class="regtxt">
                                 Discord and emails are our primary way of communication. Through Discord, we can communicate important information and allow students to interact amongst themselves. If you do not have Discord yet, please consider creating an account.
                                 </div>
