--- a/Leaders.html
+++ b/Leaders.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/6-3-2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" />
         <script src="script.js"></script>
     </head>
     <body style="background: url('/img/movie.jpg') no-repeat; background-size: cover;">
@@ -43,7 +44,53 @@
                 <div class="pre-content">
                 <!-- This is the start of the main content, use everything before as a template-->
                     <div class="content">
-                    
+                        <h1>Club Leaders</h1>
+                        <div class="flex-left-align flex-left-joinUsSteps">
+                            <div class="flexcontainer" s style="margin:0%;margin-bottom:5%;max-width: 700px;">
+                                <div class="flex-img-box">
+                                    <span class="material-symbols-outlined">
+                                    account_circle
+                                    </span>
+                                    <p>President-TBA</p>
+                                </div>
+                                <div class="flex-img-box">
+                                    <span class="material-symbols-outlined">
+                                    account_circle
+                                    </span>
+                                    <p>Vice-President-TBA</p>
+                                </div>
+                                <div class="flex-img-box">
+                                    <span class="material-symbols-outlined">
+                                    account_circle
+                                    </span>
+                                    <p>Treasurer-TBA</p>
+                                </div>
+                                <div class="flex-img-box">
+                                    <span class="material-symbols-outlined">
+                                    account_circle
+                                    </span>
+                                    <p>Secretary-TBA</p>
+                                </div>
+                                <div class="flex-img-box">
+                                    <span class="material-symbols-outlined">
+                                    account_circle
+                                    </span>
+                                    <p>Senator-TBA</p>
+                                </div>
+                                <div class="flex-img-box">
+                                    <span class="material-symbols-outlined">
+                                    account_circle
+                                    </span>
+                                    <p>Sponsor-Yuriko B</p>
+                                </div>
+                            </div>
+                            <div class="regtxt" style="max-width:450px; margin:2vw">
+                                The Web Development Syndicate elects new club leaders every semester and these leaders hold many different types of responsibilities.
+                                From organizing guest speaker presentations to promoting the club, these leaders play a vital role in the club's wellbeing.
+                                The best part about being a leader is that anyone can run and become one regardless of the skill level they have in web development.
+                                Having leadership experience is vital to success in most lines of work. That is why we want everyone to have the chance to get this important experience.
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- this is the end of the content, use everything before as a template-->
