--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/6-3-2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <script src="script.js"></script>
     </head>
     <body style="background: url('/img/movie.jpg') no-repeat; background-size: cover;">
@@ -133,7 +134,6 @@
                             This club is a great opportunity to get introduced to and learn many different things. Joining our club is a great way to start you journey into the
                             the world of web development and programming.
                         </div>
-                        <br>
                    </div>
                 </div>
                 <!-- this is the end of the content, use everything before as a template-->
