--- a/Leaders.html
+++ b/Leaders.html
@@ -51,31 +51,31 @@
                                     <span class="material-symbols-outlined">
                                     account_circle
                                     </span>
-                                    <p>President-TBA</p>
+                                    <p>President-Nate L.</p>
                                 </div>
                                 <div class="flex-img-box">
                                     <span class="material-symbols-outlined">
                                     account_circle
                                     </span>
-                                    <p>Vice-President-TBA</p>
+                                    <p>Vice-President-Joey B.</p>
                                 </div>
                                 <div class="flex-img-box">
                                     <span class="material-symbols-outlined">
                                     account_circle
                                     </span>
-                                    <p>Treasurer-TBA</p>
+                                    <p>Treasurer-Arsh S.</p>
                                 </div>
                                 <div class="flex-img-box">
                                     <span class="material-symbols-outlined">
                                     account_circle
                                     </span>
-                                    <p>Secretary-TBA</p>
+                                    <p>Secretary-Luis R.</p>
                                 </div>
                                 <div class="flex-img-box">
                                     <span class="material-symbols-outlined">
                                     account_circle
                                     </span>
-                                    <p>Senator-TBA</p>
+                                    <p>Senator-Bryan G.</p>
                                 </div>
                                 <div class="flex-img-box">
                                     <span class="material-symbols-outlined">
